# Tourism_system

./: .gitignore  README.md  devguide  import_data.py  map_tool.html  mock_data.json  pyproject.toml  requirements.txt  run_tests.py  test_ai.py  test_comment.py  test_flow.py  test_login.py  test_nav.py  test_register.py  test_search.py
data/: campus_map.json
docs/: CRAWLER_FEATURES_SUMMARY.md  CRAWLER_IMPLEMENTATION.md  CRAWL_IMPORT_GUIDE.md  FINAL_REFACTOR.md  FIX_DATA_LENGTH_ISSUE.md  PROJECT_STRUCTURE.md  QUICK_FIX.md  QUICK_START.md  QUICK_START_CRAWL.md  README.md  REFACTOR_SUMMARY.md
frontend/: README.md  app.js  demo.html  extra.css  index.html  package-lock.json  package.json  style.css  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: index.js
frontend/src/components/: AuthModal.vue  ChatPanel.vue  DiaryDetailModal.vue  DiaryPanel.vue  MapCanvas.vue  (+4 more)
src/: ai.py  algorithms.py  api.py  auth.py  clean_db.py  crawler.py  create_tables.py  database.py  diary.py  generate_data.py  import_data.py  main.py  mock_data.json  models.py  test.json  upload.py  utils.py
src/Spider_XHS/: Dockerfile  README.md  main.py  package-lock.json  requirements.txt
tests/: fix_auth.py  test_ai.py  test_comment.py  test_flow.py  test_login.py  test_nav.py  test_rag.py  test_search.py
tests/tools/: check_ids.py  check_table_structure.py  test_data_length.py  test_spider_run.py  upgrade_database.py
tools/: crawl_import.py  import_crawled_data.py  view_database.py
tools/Spider_XHS/: package.json  test_spider.py
(+9 files in other folders)
