[project]
name = "tourism-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "bcrypt==3.2.2",
    "cryptography>=46.0.3",
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "openai>=2.15.0",
    "osmnx>=2.0.7",
    "passlib[bcrypt]>=1.7.4",
    "pyexecjs>=1.5.1",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sqlmodel>=0.0.31",
    "tavily-python>=0.7.19",
    "thefuzz>=0.22.1",
    "uvicorn>=0.40.0",
]
